2012-01-01
* change copyright statements
* extract strings from JavaScript files too
* sort scans for leafs first, so big files are scanned first
* send tasks to the pool in chunks of size 1, so each process in the worker
pool runs for roughly the same time.
* fix an error in the ranking code, which significantly speeds up the
algorithm...again
* tag bz2 and gzip files

2011-12-31
* parallellise leafscans. Especially when ranking is enabled this pays off a
lot and shaves off another 30% of runtime (even more if caches are hot). It
seems to be faster even when there is only one worker process in the pool. There
is one caveat: this will only work correctly if the caching database for the
ranking scan has been *FULLY* generated, or else it will try to write to the
database, which could lead to errors. The default process is therefore
hardcoded to 1, but this will be made configurable in the near future.

2011-12-28
* for some ext4 file systems tune2fs needs 8192 bytes to run correctly
2011-12-27
* unpack scans also can return tags

2011-12-25
* select scans based on the actual offsets that were found. Also make sure
that scans for which magic was found at offset 0 are tried first.

2011-12-24
* add a very simple verifyGraphics pre-run scan. Right now it only verifies if
a file is a JPEG file.
* always run the marker search program and no longer as an optional pre-run
scan. This also simplifies the other pre-run scans a bit.
* only run the marker searches for the magic types that are defined in the
configuration. This speeds up scanning a tiny bit.
* move code outside of loops in ranking scan, slashing runtime with an
additional 60%.

2011-12-23
* stubs for adding a 'noscan' directive that scans can use to say which
category of files they don't want to scan.
* move pre-run scans to separate file
* pre-run scans can return a list of tags. Right now it is just file type, but
they could be anything. The contents of the list of tags is compared to the