@@ -1,3 +1,6 @@
+2012-01-03
+* parallellise unpacking. Hardcoded to 1 worker for now.
+
 2012-01-01
 * change copyright statements
 * extract strings from JavaScript files too
